# gen_arm32asm

./: .coverage  CONTRIBUTING.md  Dockerfile  README.md  _config.yml  ats_coverage.py  gen_arm32asm.json  gen_arm32asm.xml  main.py  pyproject.toml  run.sh  run_coverage.py  run_coverage.sh  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: gen_arm32asm_bug_report.md  gen_arm32asm_feature_request.md
.github/workflows/: gen_arm32asm_package_checker.yml  gen_arm32asm_python3_build.yml  gen_arm32asm_python_checker.yml  gen_arm32asm_toc.yml
docs/source/: conf.py  gen_arm32asm.application.rst  gen_arm32asm.application.service.rst  gen_arm32asm.domain.ports.isubprocessor.rst  gen_arm32asm.domain.ports.rst  gen_arm32asm.gen_arm32asm_bundle.rst  gen_arm32asm.infrastructure.cli.rst  gen_arm32asm.infrastructure.cli_bundle.rst  index.rst  modules.rst
gen_arm32asm/: __init__.py  engine.py  gen_arm32asm_bundle.py
gen_arm32asm/application/: __init__.py  service.py
gen_arm32asm/conf/: gen_arm32asm.cfg  gen_arm32asm.logo
gen_arm32asm/domain/: __init__.py  models.py
gen_arm32asm/infrastructure/: __init__.py  cli.py  cli_bundle.py  gen_pro_command.py  icli.py  icli_command.py  subprocessor.py
gen_arm32asm/pro/: __init__.py  read_template.py  write_template.py
gen_arm32asm/run/: gen_arm32asm_run.py
tests/: .coverage  gen_arm32asm  gen_arm32asm_coverage.json  gen_arm32asm_coverage.xml  gen_arm32asm_pro_test.py  gen_arm32asm_test.py  read_template_test.py  run_coverage.sh  test_domain.py  test_engine.py  test_infrastructure.py  test_service.py  write_template_test.py
(+22 files in other folders)
